# RainAPIServer

./: README.md  setup.cfg  tox.ini
src/rain-server/: __init__.py  configuration.py  schema.py  version.py
src/rain-server/database/: __init__.py  connexion.py  datatypes.py  errors.py
src/rain-server/database/postgresql/: __init__.py  install.py  setup.py
src/rain-server/database/postgresql/sql/: create.sql
src/rain_server/: __init__.py  main.py  version.py
src/rain_server/authenticate/: __init__.py  check_signature.py
src/rain_server/configuration/: __init__.py  db_engine.py  logger.py  paths.py
src/rain_server/schema/: __init__.py  data_schemas.py  errors.py  mutation.py  query.py
tests/: test_main.py  test_schema_mutation.py  test_schema_queries.py
tests/stubber/: __init__.py  patch.py  test_schema_mutation.py
