## Package Config ##
[metadata]
name = Rain API - Server
version = 0.0
url = https://github.com/HanaPoulpe/RainAPIServer
author = Hana Burtin
author_email = hana@hanaburtin.net
classifiers =
    Framework :: Flask
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.10
    Development Status :: 1 - Planning
    Intended Audience :: Developers
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Natural Language :: English
    Operating System :: POSIX :: Linux
    Topic :: Utilities
    Typing :: Typed
    Topic :: Internet :: WWW/HTTP :: API
    Topic :: Scientific/Engineering
license = GPLv3
license_files = LICENSE
description = Rest API for sensor status dump.
long_description = file: README.md
keywords =
    graphql
    API
    strawberry

[options]
zip_safe = False
include_packages_data = True
packages = find:
package_dir =
    bin=src
    lib=lib
install_requires =
    strawberry-graphql~=0.102
    psycopg~=3.0
    flask~=2.1
    SQLAlchemy~=1.4
    cryptography~=36.0
tests_require =
    # Base Tests
    unittest
    coverage
    flake8
    mypy
    isort
    doc8
    docstr-coverage
    flask-unittest
    # Other Test
    strawberry-graphql[debug-server]~=0.102
    testing.postgresql
    sqlalchemy-stubs
python_requires = >=3.10

[options.package_data]
* = *.txt, *.rst, *.md, *.conf, .yaml, *.json, *.sql

#[options.entry_points]
#console_scripts =
#     = benzaitensensor.benzaitensensord:main

[options.packages.find]
where=src

## Tests Config ##

## http://coverage.readthedocs.io/en/latest/config.html
[coverage:run]
branch = True
include =
    src/*
    lib/*

[coverage:paths]
source =
    src
    lib

[coverage:report]
exclude_lines =
    pragma: no cover
    if False
    \.\.\.
fail_under = 100
show_missing = True
skip_empty = True

## http://mypy.readthedocs.io/en/latest/config_file.html
[mypy]
python_version = 3.10
plugins =
    strawberry.ext.mypy_plugin
    sqlmypy

[flake8]
max-line-length = 100
doctests = True
exclude =
    .git
    .eggs
    __pycache__
    tests/
    docs/
    build/
    dist/
    .tox
    *.egg
max-complexity =  10
statistics = True
per-file-ignores =
    **/__init__.py: F401, D104
